# personal-AiAgent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  ReadMe.md  SECURITY.md  config.example.yaml  docker-compose.yml  main.py  manual(video).txt  pyproject.toml  requirements.txt  tools.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  greetings.yml  labeler.yml  lint.yml  release.yml  stale.yml
agent/: __init__.py  agent.py  anim.py  argmap.py  budget.py  cache.py  capsule.py  citations.py  cli.py  config.py  consistency.py  console.py  contradiction.py  council.py  council_evolve.py  critique.py  dag.py  debate.py  deepresearch.py  dream.py  ensemble.py  evaluate.py  evolve.py  experience.py  exporters.py  factcheck.py  forge.py  grounding.py  knowledge.py  llm.py  logging_utils.py  mcp_server.py  memory.py  models.py  oracle.py  parallel.py  personas.py  pipeline.py  planner.py  plugins.py  (+14 more)
agent/rag/: __init__.py  ingest.py  vectorstore.py
agent/scholar/: __init__.py  apa.py  arm.py  citations.py  classify.py  corpus.py  paper.py  quality.py  sources.py  synthesis.py  writing.py
agent/server/: __init__.py  __main__.py  api.py
agent/style/: __init__.py  builtin.py  readability.py  rules.py
agent/tools/: __init__.py  arxiv.py  calculator.py  convert.py  crypto.py  datetime_tool.py  dev.py  files.py  geo.py  news.py  python_repl.py  symbolic.py  text.py  translate.py  weather.py  web.py  wiki.py
docs/: architecture.md  usage.md
plugins/: example_tool.py
scripts/: setup.sh
tests/: conftest.py  test_agent_server.py  test_anim.py  test_argmap.py  test_budget.py  test_chaos.py  test_cli.py  test_config_exporters_rag.py  test_consistency.py  test_contradiction.py  test_council.py  test_council_evolve.py  test_council_loop.py  test_council_report.py  test_dag.py  test_debate.py  test_deepresearch.py  test_deepresearch_grounded.py  test_ensemble.py  test_evolve.py  test_experience.py  test_extra_tools.py  test_factcheck.py  test_forge.py  test_forge_advanced.py  test_grounded_factcheck.py  test_grounding.py  test_knowledge.py  test_memory_cache.py  test_models.py  test_parallel.py  test_personas_usage.py  test_pipeline.py  test_planner.py  test_plugins_providers_sessions.py  test_redteam.py  test_reflect.py  test_replay.py  test_router.py  test_scorecard.py  (+6 more)
tests/scholar/: test_apa.py  test_arm.py  test_citations.py  test_classify_quality.py  test_corpus.py  test_paper.py  test_sources.py  test_synthesis.py  test_writing.py  test_writing_apa.py
tests/style/: test_rules.py
